--- a/css/style.css
+++ b/css/style.css
@@ -62,17 +62,16 @@ li:nth-child(4) {
   background-color: var(--yellowcolor);
 }
 /* section1 */
-.section-one {
+.section-div {
   display: flex;
   justify-content: space-between;
 }
 .left-div {
-    max-width: 605px;
+    max-width: 650px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items:baseline;
-    margin-top: 135px;
+    justify-content: space-around;
     margin-left: 78px;
 }
 .left-title {
@@ -86,7 +85,6 @@ li:nth-child(4) {
   font-size: 26px;
   color: #242424;
   opacity: 50%;
-  margin-top: 41px;
 }
 .order {
   color: var(--whitecolor);
@@ -100,12 +98,102 @@ li:nth-child(4) {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 80px;
 }
 .right-div {
-  max-width: 610px;
+  max-width: 582px;
   width: 100%;
 }
 .pizza-one {
   width: 100%;
+}
+.three-icons {
+  max-width: 197px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 80px;
+}
+.twitter,
+.internet,
+.instagram {
+  width: 70%;
+}
+/* ourfood section */
+.ourfood-section {
+ display: flex;
+ justify-content: space-between; 
+}
+.leftdiv {
+  max-width: 650px;
+  width: 100%;
+  margin-top: 35px;
+}
+.ourfood-pic {
+  width: 100%;
+}
+.rght-div {
+  max-width: 650px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 35px;
+  margin: auto 0;
+}
+.first-title {
+  font-size: 40px;
+}
+.orange-div {
+  width: 252px;
+  height: 5px;
+  background-color: #F8A22F;
+  border-radius: 100px;
+  margin-top: 10px;
+}
+.small-div-one {
+  max-width: 218px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+.small-div-two {
+  max-width: 230px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+.small-div-three {
+  max-width: 257px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+.text-one {
+  font-size: 20px;
+}
+.click {
+  width: 30px;
+  height: 30px;
+}
+.description-one {
+  font-size: 15px;
+  opacity: 50%;
+  margin-left: 85px;
+  margin-top: 5px;
+}
+.click-div-second {
+  background-color: var(--yellowcolor);
+  width: 200px;
+  height: 40px;
+  border-radius: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
 }
