--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Road+Rage&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
 
 :root {
   --whitecolor: #ffffff;
@@ -12,20 +12,20 @@
 .taste,
 .f,
 .pizza {
-    font-size: 43px;
-    font-family:  'Road Rage', cursive;
-    color: var(--whitecolor);
+  font-size: 43px;
+  font-family: "Road Rage", cursive;
+  color: var(--whitecolor);
 }
 .f {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 .pizza {
-    color: #7E0516;
+  color: #7e0516;
 }
 .rightdiv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .header-div {
   display: flex;
@@ -44,7 +44,7 @@
   color: var(--whitecolor);
   opacity: 80%;
   font-size: 24px;
-  font-family: 'Road Rage', cursive;
+  font-family: "Road Rage", cursive;
 }
 li:nth-child(4) {
   margin-right: 0;
@@ -67,19 +67,19 @@ li:nth-child(4) {
   justify-content: space-between;
 }
 .left-div {
-    max-width: 650px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 78px;
+  max-width: 650px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 78px;
 }
 .left-title {
-    font-size: 71px;
-    font-family: 'Baloo 2', cursive;
+  font-size: 71px;
+  font-family: "Baloo 2", cursive;
 }
 .food {
-    color: #F8A22F;
+  color: #f8a22f;
 }
 .left-text {
   font-size: 26px;
@@ -120,8 +120,8 @@ li:nth-child(4) {
 }
 /* ourfood section */
 .ourfood-section {
- display: flex;
- justify-content: space-between; 
+  display: flex;
+  justify-content: space-between;
 }
 .leftdiv {
   max-width: 650px;
@@ -146,7 +146,7 @@ li:nth-child(4) {
 .orange-div {
   width: 252px;
   height: 5px;
-  background-color: #F8A22F;
+  background-color: #f8a22f;
   border-radius: 100px;
   margin-top: 10px;
 }
@@ -196,4 +196,39 @@ li:nth-child(4) {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
+}
+/* plans */
+.plans-div {
+  max-width: 1920px;
+  width: 100%;
+  height: 300px;
+  background-image: url(../images/pizzas.png);
+  background-repeat: no-repeat;
+  background-color: var(--yellowcolor);
+  color: #f8a22f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.div-plan-line {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.plan-title {
+  font-size: 43px;
+  color: #7e0516;
+  font-family: "Road Rage", cursive;
+}
+.plan-section-div {
+  display: flex;
+  justify-content: space-around;
+}
+.pizzaone,
+.pizzatwo {
+  width: 40%;
+}
+.big-div {
+  display: flex;
+  justify-content: space-around;
 }
