--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,25 @@
   color: greenyellow;
 }
 .o:hover {
-  color:lightslategray;
+  color: red;
 }
 .f-two:hover {
   color: lightcoral;
+}
+.l:hover {
+  color: cornflowerblue;
+}
+.n:hover {
+  color: darksalmon;
+}
+.t:hover {
+  color: chartreuse;
+}
+.c:hover {
+  color:fuchsia;
+}
+.u:hover {
+  color: gold;
 }
 
 .taste,
@@ -53,6 +68,9 @@
   font-size: 55px;
   font-family: "Road Rage", cursive;
   color: var(--whitecolor);
+}
+.taste:hover, .f:hover, .pizza:hover {
+  cursor: pointer;
 }
 .f {
   margin-right: 20px;
@@ -71,6 +89,7 @@
   align-items: center;
   max-width: 1920px;
   width: 100%;
+  position: relative;
 }
 .ul-li {
   display: flex;
@@ -93,6 +112,14 @@
   padding-left: 5px;
   padding-right: 5px;
   border-color: whitesmoke;
+}
+.toggle-button {
+  font-size: 30px;
+  color: #ffffff;
+  position: absolute;
+  display: none;
+  top: 30px;
+  right: 30px;
 }
 .background-image {
   background-image: url(../images/background.svg);
@@ -133,13 +160,19 @@
 }
 .click-div {
   background-color: var(--yellowcolor);
-  width: 232px;
+  max-width: 232px;
+  width: 100%;
   height: 64px;
   border-radius: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: 0.4s linear ;
+}
+.click-div:hover {
+  background-color: burlywood;
+  cursor: pointer;
 }
 .right-div {
   max-width: 582px;
@@ -312,6 +345,7 @@
   border-radius: 10px;
   margin-top: 30px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: 0.5s linear;
 }
 .textarea-element {
   height: 120px;
@@ -323,7 +357,20 @@
   max-width: 200px;
   width: 100%;
   height: 50px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(121, 121, 121, 0.35) 0px 5px 15px;
+  transition: 0.5s linear;
+}
+.button-div:hover {
+  cursor: pointer;
+  background-color:#242424;
+  opacity: 60%;
+}
+.button-div:hover,
+.input-one:hover,
+.textarea-element:hover {
+  background-color:#242424;
+  color: var(--whitecolor);
+  opacity: 40%;
 }
 .first-lbl {
   margin-top: 20px;
@@ -364,17 +411,22 @@ li {
   padding-top: 75px;
 }
 .footer-title {
-  font-size: 43px;
+  font-size: 45px;
   color: var(--yellowcolor);
   font-family: "Road Rage", cursive;
+}
+.footer-title:hover {
+  cursor: pointer;
 }
 .all {
   font-size: 15px;
   color: var(--whitecolor);
+  font-family: "Baloo 2", cursive;
 }
 .three-titles {
   font-size: 17px;
   color: var(--whitecolor);
+  font-family: "Baloo 2", cursive;
 }
 .li-last {
   margin-top: 15px;
@@ -387,7 +439,8 @@ li {
 .twitter,
 .google,
 .instagram {
-  width: 19px;
+  max-width: 19px;
+  width: 100%;
   height: 19px;
   margin-left: 15px;
 }
