--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,13 @@
   color: blue;
 }
 .e:hover {
-  color:deeppink;
+  color: deeppink;
 }
 .f:hover {
   color: lightseagreen;
 }
 .p:hover {
-  color:magenta ;
+  color: magenta;
 }
 .i:hover {
   color: red;
@@ -56,7 +56,7 @@
   color: chartreuse;
 }
 .c:hover {
-  color:fuchsia;
+  color: fuchsia;
 }
 .u:hover {
   color: gold;
@@ -69,7 +69,9 @@
   font-family: "Road Rage", cursive;
   color: var(--whitecolor);
 }
-.taste:hover, .f:hover, .pizza:hover {
+.taste:hover,
+.f:hover,
+.pizza:hover {
   cursor: pointer;
 }
 .f {
@@ -168,7 +170,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  transition: 0.4s linear ;
+  transition: 0.4s linear;
 }
 .click-div:hover {
   background-color: burlywood;
@@ -281,7 +283,7 @@
   align-items: center;
   margin-top: 40px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  transition: 0.4s linear ;
+  transition: 0.4s linear;
 }
 .click-div-second:hover {
   background-color: burlywood;
@@ -310,6 +312,14 @@
 .pizzaone,
 .pizzatwo {
   width: 35%;
+  transition: 0.2s linear;
+}
+.pizzaone:hover,
+.pizzatwo:hover {
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 20px;
+  border-color: var(--yellowcolor);
 }
 .big-div {
   display: flex;
@@ -362,18 +372,22 @@
 }
 .button-div:hover {
   cursor: pointer;
-  background-color:#242424;
+  background-color: #242424;
   opacity: 60%;
 }
 .button-div:hover,
 .input-one:hover,
 .textarea-element:hover {
-  background-color:#242424;
+  background-color: #242424;
   color: var(--whitecolor);
   opacity: 40%;
 }
 .first-lbl {
   margin-top: 20px;
+}
+.iframe {
+  width: 800px;
+  height: 300px;
 }
 
 /* hintdiv */
@@ -403,12 +417,12 @@ li {
   background-color: black;
   max-width: 1920px;
   width: 100%;
-  height: 250px;
-  background-image: url(../images/Mask\ Group\ 5.png);
+  background-image: url(../images/Mask\ Group\ 2.png);
   background-size: cover;
   display: flex;
   justify-content: space-around;
   padding-top: 75px;
+  padding-bottom: 75px;
 }
 .footer-title {
   font-size: 45px;
@@ -447,4 +461,3 @@ li {
 .facebook {
   margin-left: 0;
 }
-
