--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,19 +3,32 @@
 @media (max-width: 900px) {
   .navigation-div {
     display: none;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .toggle-button {
     display: block;
   }
   .header-div {
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     padding-left: 30px;
   }
   .ul-li {
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
   .navigation-div.active {
     display: block;
@@ -42,8 +55,13 @@
 /* 680px */
 @media (max-width: 680px) {
   .section-div {
-    flex-direction: column-reverse;
-    align-items: flex-end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
   }
   .left-div {
     max-width: 580px;
@@ -64,7 +82,10 @@
 /* 580px */
 @media (max-width: 580px) {
   .footer-div {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .footer-two,
   .footer-four,
@@ -104,8 +125,13 @@
     border-radius: 0% 75% 0% 75% / 24% 75% 100% 100%;
   }
   .ourfood-section {
-    flex-direction: column-reverse;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .first-title {
     font-size: 35px;
@@ -146,7 +172,7 @@
   .click-div-second {
     width: 150px;
     height: 30px;
-    margin-left: 0;
+    margin-left: 50;
   }
   .order-page {
     font-size: 17px;
@@ -203,7 +229,8 @@
 /* 820px */
 @media (max-width: 820px) {
   .map-contacts-div {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .hint-div {
     margin-top: 20px;
